// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A H1 Element applies normalWeight modifier 1`] = `
<h1
  className="sc-bdVaJa iECMLI"
>
  Header Element
</h1>
`;

exports[`A H1 Element renders correctly 1`] = `
<h1
  className="sc-bdVaJa jqOjeD"
>
  Header Element
</h1>
`;
